[package]
name = "pokerus"
version = "0.1.0"
authors = ["Jadon Fowler <j@jadon.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = {git = "https://github.com/phase/image-png", branch = "set-palette-for-encoding"}
bitbit = "0.2.0"
logos = "0.9.7"
